# latticearc

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  SESSION_SUMMARY_2026-02-11_FINAL.md  deny.toml  rustfmt.toml
arc-core/: Cargo.toml  README.md
arc-core/src/: audit.rs  config.rs  error.rs  hardware.rs  key_lifecycle.rs  lib.rs  logging.rs  selector.rs  serialization.rs  tests.rs  traits.rs  types.rs  zero_trust.rs
arc-core/src/convenience/: aes_gcm.rs  api.rs  ed25519.rs  hashing.rs  hybrid.rs  hybrid_sig.rs  keygen.rs  mod.rs  pq_kem.rs  pq_sig.rs
arc-core/tests/: aes_gcm_convenience_tests.rs  api_stability_comprehensive.rs  config_comprehensive.rs  ed25519_convenience_tests.rs  hardware_comprehensive.rs  hardware_integration.rs  hybrid_convenience_tests.rs  hybrid_integration.rs  negative_tests_aead.rs  negative_tests_pq_kem.rs  negative_tests_pq_sig.rs  platform_compatibility_comprehensive.rs  pq_kem_convenience_tests.rs  pq_sig_convenience_tests.rs  serialization_comprehensive.rs  serialization_integration.rs  signature_integration.rs  version_compatibility_comprehensive.rs  zero_trust_comprehensive.rs  zero_trust_integration.rs
arc-fuzz/: Cargo.toml
arc-fuzz/fuzz_targets/: chacha_poly_fuzz.rs  cross_border_fuzz.rs  encrypt_fuzz.rs  fuzz_target_1.rs  hmac_fuzz.rs  hybrid_encrypt_fuzz.rs  hybrid_kem_fuzz.rs  hybrid_sign_fuzz.rs
arc-hybrid/: Cargo.toml  README.md
arc-hybrid/src/: compose.rs  encrypt_hybrid.rs  formal_verification.rs  kem_hybrid.rs  lib.rs  sig_hybrid.rs
arc-hybrid/tests/: zeroization_tests.rs
arc-perf/: Cargo.toml  README.md
arc-perf/benches/: benchmarks.rs
arc-perf/src/: lib.rs
arc-perf/tests/: integration_test.rs  performance_comprehensive.rs
arc-prelude/: Cargo.toml  README.md  build.rs
arc-prelude/src/: lib.rs
arc-prelude/src/prelude/: cavp_compliance.rs  ci_testing_framework.rs  domains.rs  formal_verification.rs  memory_safety_testing.rs  mod.rs  prelude.rs  property_based_testing.rs  side_channel_analysis.rs
arc-prelude/tests/: error_recovery_integration.rs
arc-primitives/: Cargo.toml  README.md  build.rs
arc-primitives/examples/: comprehensive_benchmark.rs  crypto_timing.rs  test_ml_kem.rs
arc-primitives/src/: error.rs  fips_error.rs  lib.rs  pct.rs  security.rs  self_test.rs  simple_zeroization_tests.rs  zeroization_tests.rs
arc-primitives/src/aead/: aes_gcm.rs  chacha20poly1305.rs  mod.rs
arc-primitives/src/ec/: bls12_381.rs  bn254.rs  ed25519.rs  mod.rs  secp256k1.rs  traits.rs
arc-primitives/src/hash/: mod.rs  sha2.rs  sha3.rs
arc-primitives/src/kdf/: hkdf.rs  mod.rs  pbkdf2.rs  sp800_108_counter_kdf.rs
arc-primitives/src/kem/: ecdh.rs  ml_kem.rs  mod.rs
arc-primitives/src/keys/: mod.rs
arc-primitives/src/mac/: cmac.rs  hmac.rs  mod.rs
arc-primitives/src/polynomial/: arithmetic.rs  mod.rs  montgomery.rs  ntt_processor.rs
arc-primitives/src/rand/: csprng.rs  entropy_tests.rs  mod.rs
arc-primitives/src/sig/: fndsa.rs  ml_dsa.rs  (+2 more)
arc-primitives/tests/: concurrency_comprehensive.rs  concurrency_tests.rs  constant_time_verification.rs  ecdh_comprehensive.rs  fn_dsa_comprehensive.rs  interoperability_comprehensive.rs  ml_dsa_comprehensive.rs  ml_kem_comprehensive.rs  negative_tests_aead.rs  negative_tests_kem.rs  regression_comprehensive.rs  side_channel_comprehensive.rs  side_channel_resistance.rs  slh_dsa_comprehensive.rs  stress_comprehensive.rs  test_kdf.rs
arc-tests/: Cargo.toml
arc-tests/src/: lib.rs
arc-tls/: Cargo.toml  MONITORING.md  README.md
arc-tls/benches/: tls_performance.rs
arc-tls/examples/: test_rustls_compat.rs  tls13_custom_hybrid.rs  tls13_hybrid_client.rs
arc-tls/src/: basic_features.rs  context.rs  error.rs  formal_verification.rs  lib.rs  pq_key_exchange.rs  recovery.rs  selector.rs  session_store.rs  tls13.rs  tracing.rs
arc-tls/tests/: basic.rs  error_handling_tests.rs  formal_verification_tests.rs  hybrid_tls.rs  monitoring_tests.rs  pq.rs  selector_tests.rs  tls_comprehensive.rs  tls_session_comprehensive.rs
arc-validation/: Cargo.toml  README.md
arc-validation/benches/: constant_time.rs
arc-validation/src/: bounds.rs  constant_time.rs  fips_validation_impl.rs  format.rs  input.rs  lib.rs  nist_functions.rs  nist_sp800_22.rs  output.rs  proptest_crypto.rs  resource_limits.rs  rfc_vectors.rs  timing.rs  validation_summary.rs  wycheproof.rs
arc-validation/tests/: aes_gcm_kat_tests.rs  cavp_enhanced_tests.rs  cavp_official_vectors_tests.rs  cavp_pipeline_algorithms.rs  cavp_pipeline_integration.rs  cavp_pipeline_tests.rs  cavp_storage_tests.rs  chacha20_poly1305_kat_tests.rs  fips_140_3_compliance_tests.rs  fips_global_tests.rs  fips_validation_tests.rs  format_tests.rs  hkdf_kat_tests.rs  hmac_kat_tests.rs  kat_ec_tests.rs  kat_loaders_tests.rs  kat_reports_tests.rs  kat_runners_extended_tests.rs  kat_runners_tests.rs  kat_types_tests.rs  ml_dsa_kat_tests.rs  ml_kem_kat_tests.rs  nist_compliance_comprehensive.rs  nist_kat_compliance.rs  nist_kat_integration.rs  nist_kat_mod_tests.rs  nist_kat_sha2_tests.rs  resource_limits_tests.rs  rfc_vectors_tests.rs  statistical_timing_tests.rs  timing_tests.rs  validation_comprehensive.rs  validation_summary_tests.rs  wycheproof_tests.rs
arc-zkp/: Cargo.toml  README.md
arc-zkp/src/: commitment.rs  error.rs  lib.rs  schnorr.rs  sigma.rs
arc-zkp/tests/: zkp_comprehensive.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: constant_time_fuzz.rs  encrypt_fuzz.rs  fuzz_aes_gcm.rs  fuzz_chacha20.rs  fuzz_ecdh_p256.rs  fuzz_ed25519.rs  fuzz_hkdf.rs  fuzz_hmac_sha512.rs  fuzz_hybrid_decrypt.rs  fuzz_hybrid_encrypt.rs  fuzz_ml_dsa_sign.rs  fuzz_ml_dsa_verify.rs  fuzz_ml_kem_decaps.rs  fuzz_ml_kem_encaps.rs  fuzz_ml_kem_keygen.rs  fuzz_pbkdf2.rs  fuzz_random.rs  fuzz_sha256.rs  fuzz_slh_dsa_sign.rs  fuzz_x25519.rs  hybrid_sign_fuzz.rs  ml_dsa_fuzz.rs
fuzz/tests/: fuzz_regression_tests.rs
latticearc/: Cargo.toml  README.md
latticearc/src/: lib.rs
latticearc/tests/: e2e_integration.rs  nist_kat_tests.rs  security_property_tests.rs  unified_api_integration.rs
(+161 files in other folders)
