[package]
name = "arc-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "LatticeArc Core - Unified Cryptographic API with Zero-Trust Security"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true

# Inherit all lints from workspace
[lints]
workspace = true

[dependencies]
arc-primitives = { version = "0.1.0", path = "../arc-primitives" }
arc-prelude = { version = "0.1.0", path = "../arc-prelude" }
arc-validation = { version = "0.1.0", path = "../arc-validation" }
thiserror = { workspace = true }
anyhow = { workspace = true }

# Tracing and logging dependencies
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-appender = { workspace = true }

# Cryptographic and utility dependencies
aws-lc-rs = { workspace = true }  # FIPS 140-3 validated crypto (AES-GCM, HKDF)
blake2 = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
subtle = { workspace = true }
zeroize = { workspace = true }
hex = { workspace = true }

sha3 = { workspace = true }
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }
k256 = { workspace = true }
hmac = { workspace = true }
rayon = { workspace = true }
lazy_static = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }
crossbeam-utils = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lib]
path = "src/lib.rs"
