[package]
name = "arc-hybrid"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Hybrid cryptography combining post-quantum and classical algorithms"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true

[lints]
workspace = true

[dependencies]
# Core primitives (includes aws-lc-rs for FIPS 140-3 validated ML-KEM, X25519, AES-GCM, HKDF)
arc-primitives = { version = "0.1.0", path = "../arc-primitives" }

# FIPS 140-3 validated crypto (AES-GCM, HKDF, X25519)
aws-lc-rs = { workspace = true }

chacha20poly1305 = { workspace = true }
ed25519-dalek = { workspace = true }
ecdsa = { workspace = true }
p256 = { workspace = true }

# Key Derivation
hmac = { workspace = true }
sha2 = { workspace = true }

# Randomness
rand = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
zeroize = { workspace = true }

# Constant-time operations
subtle = { workspace = true }

[lib]
path = "src/lib.rs"

[features]
formal-verification = []
