[package]
name = "arc-perf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Performance profiling and benchmarking for LatticeArc"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true

# Inherit all lints from workspace
[lints]
workspace = true

[dependencies]
# Core dependencies
arc-prelude = { version = "0.1.0", path = "../arc-prelude" }

[dev-dependencies]
criterion = { workspace = true }

[lib]
path = "src/lib.rs"

[[bench]]
name = "benchmarks"
harness = false
