[package]
name = "arc-tls"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "TLS 1.3 with post-quantum key exchange for LatticeArc"
readme = "README.md"
repository.workspace = true
keywords = ["tls", "post-quantum", "cryptography", "rustls"]
categories = ["cryptography", "network-programming"]

# Inherit all lints from workspace
[lints]
workspace = true

[dependencies]
arc-primitives = { path = "../arc-primitives", version = "0.1.1" }
arc-core = { path = "../arc-core", version = "0.1.1" }
arc-hybrid = { path = "../arc-hybrid", version = "0.1.1" }
rustls = { workspace = true }
rustls-post-quantum = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
serde = { workspace = true }
criterion = { workspace = true }
tempfile = { workspace = true }

# Additional TLS dependencies
rustls-pki-types = { workspace = true }
tokio-rustls = { workspace = true }
webpki-roots = { workspace = true }
rustls-native-certs = { workspace = true }
zeroize = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ed25519-dalek = { workspace = true }

[[bench]]
name = "tls_performance"
harness = false

[[example]]
name = "tls13_hybrid_client"

[[example]]
name = "tls13_custom_hybrid"
